Add fudament for API based on cconnexion
