# airflow/api_connexion/openapi/v1.yaml
@@ -38,7 +38,7 @@ paths:
   /connections:
     get:
       summary: Get all connection entries
-      operationId: getConnections
+      operationId: airflow.api_connexion.endpoints.connection_endpoint.get_connections
       tags: [Connection]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -59,7 +59,7 @@ paths:
 
     post:
       summary: Create connection entry
-      operationId: createConnection
+      operationId: airflow.api_connexion.endpoints.connection_endpoint.post_connection
       tags: [Connection]
       requestBody:
         required: true
@@ -87,7 +87,7 @@ paths:
 
     get:
       summary: Get a connection entry
-      operationId: getConnection
+      operationId: airflow.api_connexion.endpoints.connection_endpoint.get_connection
       tags: [Connection]
       responses:
         '200':
@@ -105,7 +105,7 @@ paths:
 
     patch:
       summary: Update a connection entry
-      operationId: updaateConnection
+      operationId: airflow.api_connexion.endpoints.connection_endpoint.patch_connection
       tags: [Connection]
       parameters:
         - $ref: '#/components/parameters/UpdateMask'
@@ -134,7 +134,7 @@ paths:
 
     delete:
       summary: Delete a connection entry
-      operationId: deleteConnection
+      operationId: airflow.api_connexion.endpoints.connection_endpoint.delete_connection
       tags: [Connection]
       responses:
         '204':
@@ -149,7 +149,7 @@ paths:
   /dags:
     get:
       summary: Get all DAGs
-      operationId: getDags
+      operationId: airflow.api_connexion.endpoints.dag_model_endpoint.get_dags
       tags: [DAG]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -173,7 +173,7 @@ paths:
     get:
       summary: Get basic information about a DAG
       description: Presents only information available in database (DAGModel).
-      operationId: getDag
+      operationId: airflow.api_connexion.endpoints.dag_model_endpoint.get_dag
       tags: [DAG]
       responses:
         '200':
@@ -191,7 +191,7 @@ paths:
 
     patch:
       summary: Update a DAG
-      operationId: updateDag
+      operationId: airflow.api_connexion.endpoints.dag_model_endpoint.patch_dag
       tags: [DAG]
       responses:
         '200':
@@ -213,7 +213,7 @@ paths:
 
     post:
       summary: Clears a set of task instances associated with the DAAG for a specified date range.
-      operationId: clearTaskInstaance
+      operationId: airflow.api_connexion.endpoints.dag_model_endpoint.clear_task_instances
       tags: [DAG]
       requestBody:
         description: Parameters of action
@@ -245,7 +245,7 @@ paths:
       summary: Get all DAG Runs
       description: >
         This endpoint support reading resources across multiple DAGs by specifying a "~" as a dag_id.
-      operationId: getDagRuns
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.get_dag_runs
       tags: [DAGRun]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -273,7 +273,7 @@ paths:
       summary: Get all DAG Runs.
       description: >
         It allows you to fetch DAG Runs from many DAGs.
-      operationId: getDagRunsBatch
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.get_dag_runs_batch
       tags: [DAGRun]
       requestBody:
         required: true
@@ -307,7 +307,7 @@ paths:
 
     get:
       summary: Get a DAG Run
-      operationId: getDagRun
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.get_dag_run
       tags: [DAGRun]
       responses:
         '200':
@@ -325,7 +325,7 @@ paths:
 
     post:
       summary: Trigger a DAG Run
-      operationId: createDagRun
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.post_dag_run
       tags: [DAGRun]
       requestBody:
         required: true
@@ -351,7 +351,7 @@ paths:
 
     patch:
       summary: Update a DAG Run
-      operationId: updateDagRun
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.patch_dag_run
       tags: [DAGRun]
       parameters:
         - $ref: '#/components/parameters/UpdateMask'
@@ -380,7 +380,7 @@ paths:
 
     delete:
       summary: Delete a DAG Run
-      operationId: deleteDagRun
+      operationId: airflow.api_connexion.endpoints.dag_run_endpoint.delete_dag_run
       tags: [DAGRun]
       responses:
         '204':
@@ -395,7 +395,7 @@ paths:
   /eventLogs:
     get:
       summary: Get all log entries from event log
-      operationId: getEventLog
+      operationId: airflow.api_connexion.endpoints.event_log_endpoint.get_event_logs
       tags: [EventLog]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -420,7 +420,7 @@ paths:
 
     get:
       summary: Get a log entry
-      operationId: getEventLogEntry
+      operationId: airflow.api_connexion.endpoints.event_log_endpoint.get_event_log
       tags: [EventLog]
       responses:
         '200':
@@ -439,7 +439,7 @@ paths:
   /importErrors:
     get:
       summary: Get all import errors
-      operationId: getImportErrors
+      operationId: airflow.api_connexion.endpoints.import_errror_endpoint.get_import_errors
       tags: [ImportError]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -464,7 +464,7 @@ paths:
 
     get:
       summary: Get an import error
-      operationId: getImportError
+      operationId: airflow.api_connexion.endpoints.import_errror_endpoint.get_import_error
       tags: [ImportError]
       responses:
         '200':
@@ -482,7 +482,7 @@ paths:
 
     delete:
       summary: Delete an import error
-      operationId: deleteImportError
+      operationId: airflow.api_connexion.endpoints.import_errror_endpoint.delete_import_error
       tags: [ImportError]
       responses:
         '204':
@@ -497,7 +497,7 @@ paths:
   /pools:
     get:
       summary: Get all pools
-      operationId: getPools
+      operationId: airflow.api_connexion.endpoints.pool_endpoint.get_pools
       tags: [Pool]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -518,7 +518,7 @@ paths:
 
     post:
       summary: Create a pool
-      operationId: createPool
+      operationId: airflow.api_connexion.endpoints.pool_endpoint.post_pool
       tags: [Pool]
       requestBody:
         required: true
@@ -546,7 +546,7 @@ paths:
 
     get:
       summary: Get a pool
-      operationId: getPool
+      operationId: airflow.api_connexion.endpoints.pool_endpoint.get_pool
       tags: [Pool]
       responses:
         '200':
@@ -564,7 +564,7 @@ paths:
 
     patch:
       summary: Update a pool
-      operationId: updatePool
+      operationId: airflow.api_connexion.endpoints.pool_endpoint.patch_pool
       tags: [Pool]
       parameters:
         - $ref: '#/components/parameters/UpdateMask'
@@ -593,7 +593,7 @@ paths:
 
     delete:
       summary: Delete a pool
-      operationId: deletePool
+      operationId: airflow.api_connexion.endpoints.pool_endpoint.delete_pool
       tags: [Pool]
       responses:
         '204':
@@ -625,7 +625,7 @@ paths:
       description: >
         This endpoint support reading resources across multiple DAGs by specifying a "~" as a dag_id
         or an execution date.
-      operationId: getTaskInstances
+      operationId: airflow.api_connexion.endpoints.task_instance_endpoint.get_task_instances
       tags: [TaskInstance]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -652,7 +652,7 @@ paths:
 
     get:
       summary: Get a task instance
-      operationId: getTaskInstance
+      operationId: airflow.api_connexion.endpoints.task_instance_endpoint.delete_task_instance
       tags: [TaskInstance]
       responses:
         '200':
@@ -671,7 +671,7 @@ paths:
   /dags/~/dagRuns/~/taskInstances/list:
     post:
       summary: Get list of task instance.
-      operationId: getTaskInstancesBatch
+      operationId: airflow.api_connexion.endpoints.task_instance_endpoint.get_task_instances_batch
       tags: [TaskInstance]
       requestBody:
         required: true
@@ -702,7 +702,7 @@ paths:
   /variables:
     get:
       summary: Get all variables
-      operationId: getVariables
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.get_variables
       tags: [Variable]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -723,7 +723,7 @@ paths:
 
     post:
       summary: Create a variable
-      operationId: createVariable
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.post_variables
       tags: [Variable]
       requestBody:
         required: true
@@ -751,7 +751,7 @@ paths:
 
     get:
       summary: Get a variable by id
-      operationId: getVariable
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.get_variable
       description: The collection does not contain data. To get data, you must get a single entity.
       tags: [Variable]
       responses:
@@ -770,7 +770,7 @@ paths:
 
     patch:
       summary: Update a variable by id
-      operationId: updateVariable
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.patch_variable
       tags: [Variable]
       parameters:
         - $ref: '#/components/parameters/UpdateMask'
@@ -799,7 +799,7 @@ paths:
 
     delete:
       summary: Delete variable
-      operationId: deleteVariable
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.delete_variable
       tags: [Variable]
       responses:
         '204':
@@ -818,7 +818,7 @@ paths:
     get:
       summary: Get variable using its key.
       description: The response contains all fields, including data.
-      operationId: lookupVariable
+      operationId: airflow.api_connexion.endpoints.variable_endpoint.lookup_variable
       tags: [Variable]
       responses:
         '200':
@@ -845,7 +845,7 @@ paths:
       description:
         This endpoint support reading resources across multiple XCom entries by specifying a
         "~" as a `dag_id`, `task_id` and `execution_date`.
-      operationId: getXComEntry
+      operationId: airflow.api_connexion.endpoints.xcom_endpoint.get_xcom_entries
       tags: [XCom]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -866,7 +866,7 @@ paths:
 
     post:
       summary: Create an XCom entry
-      operationId: updateXComEntries
+      operationId: airflow.api_connexion.endpoints.xcom_endpoint.post_xcom_entries
       tags: [XCom]
       requestBody:
         required: true
@@ -897,7 +897,7 @@ paths:
 
     get:
       summary: Get an XCom entry
-      operationId: getXComValue
+      operationId: airflow.api_connexion.endpoints.xcom_endpoint.get_xcom_entry
       tags: [XCom]
       responses:
         '200':
@@ -915,7 +915,7 @@ paths:
 
     patch:
       summary: Update an XCom entry
-      operationId: updateXComValue
+      operationId: airflow.api_connexion.endpoints.xcom_endpoint.patch_xcom_entry
       tags: [XCom]
       parameters:
         - $ref: '#/components/parameters/UpdateMask'
@@ -944,7 +944,7 @@ paths:
 
     delete:
       summary: Delete an XCom entry
-      operationId: deleteXComValue
+      operationId: airflow.api_connexion.endpoints.xcom_endpoint.delete_xcom_entry
       tags: [XCom]
       responses:
         '204':
@@ -965,7 +965,7 @@ paths:
 
     get:
       summary: Get extra links for task instance
-      operationId: getExtraLinks
+      operationId: airflow.api_connexion.endpoints.extra_link_endpoint.get_extra_links
       tags: [TaskInstance]
       responses:
         '200':
@@ -992,7 +992,7 @@ paths:
 
     get:
       summary: Get logs for specific task instance
-      operationId: getLogs
+      operationId: airflow.api_connexion.endpoints.log_endpoint.get_log
       tags: [TaskInstance]
       responses:
         '200':
@@ -1024,7 +1024,7 @@ paths:
 
     get:
       summary: Get simplified representation of DAG.
-      operationId: getDagStructure
+      operationId: airflow.api_connexion.endpoints.dag_python_endpoint.get_dag_structure
       tags: [DAG]
       responses:
         '200':
@@ -1046,7 +1046,7 @@ paths:
 
     get:
       summary: Get tasks for DAG
-      operationId: getTasks
+      operationId: airflow.api_connexion.endpoints.task_endpoint.get_tasks
       tags: [DAG]
       responses:
         '200':
@@ -1069,7 +1069,7 @@ paths:
 
     get:
       summary: Get simplified representation of a task.
-      operationId: getTask
+      operationId: airflow.api_connexion.endpoints.task_endpoint.get_task
       tags: [DAG]
       responses:
         '200':
@@ -1091,7 +1091,7 @@ paths:
 
     get:
       summary: Get source code using file token
-      operationId: getDagSource
+      operationId: airflow.api_connexion.endpoints.dag_source_endpoint.get_dag_source
       tags: [DAG]
       responses:
         '200':
@@ -1113,7 +1113,7 @@ paths:
   /config:
     get:
       summary: Get current configuration
-      operationId: getConfig
+      operationId: airflow.api_connexion.endpoints.config_endpoint.get_config
       tags: [Config]
       parameters:
         - $ref: '#/components/parameters/PageLimit'
@@ -1132,6 +1132,20 @@ paths:
           $ref: '#/components/responses/Unauthenticated'
         '403':
           $ref: '#/components/responses/PermissionDenied'
+
+  /health:
+    get:
+      summary: Checks if the API works
+      operationId: airflow.api_connexion.endpoints.health_endpoint.get_health
+      tags: [Monitoring]
+      responses:
+        '200':
+          description: It should always return "OK"
+          content:
+            text/plain:
+              schema:
+                type: string
+
 
 components:
   # Reusable schemas (data models)
@@ -2401,6 +2415,7 @@ tags:
   - name: DAGRun
   - name: EventLog
   - name: ImportError
+  - name: Monitoring
   - name: Pool
   - name: TaskInstance
   - name: Variable
